pratique/2014-p2-f2-frequencia/2014-p2-f2-frequencia-comp.txt
2014-p2-f2-frequencia.cpp: In function ‘int main()’:
2014-p2-f2-frequencia.cpp:15:39: error: expected initializer before ‘freq’
   15 |     vector<vector<map<int, int>>> row freq(N), col freq(N);
      |                                       ^~~~
2014-p2-f2-frequencia.cpp:27:21: error: ‘row_freq’ was not declared in this scope
   27 |                     row_freq[x-1][r]++;
      |                     ^~~~~~~~
2014-p2-f2-frequencia.cpp:32:21: error: ‘col_freq’ was not declared in this scope
   32 |                     col_freq[x-1][r]++;
      |                     ^~~~~~~~
2014-p2-f2-frequencia.cpp:36:39: error: ‘row_freq’ was not declared in this scope
   36 |             map<int, int>& freq_map = row_freq[x-1];
      |                                       ^~~~~~~~
2014-p2-f2-frequencia.cpp:46:39: error: ‘col_freq’ was not declared in this scope
   46 |             map<int, int>& freq_map = col_freq[x-1];
      |                                       ^~~~~~~~
